network/route_tables.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route" "public_route" {
  route_table_id            = "aws_route_table.public.id"
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id  = "aws_internet_gateway.gw.id"
}

resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public_sub.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.myvpc.id
}
